src/tests/test-src/errors/E82-immutable-var.syntran
// E82: immutable-var
// Assigning to a std:: constant is not allowed

std::PI = 3.0;
